--- a/index.html
+++ b/index.html
@@ -5,7 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Leatra</title>
   </head>
-  <body></body>
+  <body>
+    <section class="landing-page">
+      <nav>
+        <div class="nav--logo">
+          <img class="logo" src="images/logo1.png" alt="" />
+        </div>
+        <ul>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Products</a></li>
+          <li><a id="contactUs" href="#">Contact Us</a></li>
+        </ul>
+      </nav>
+      <div class="container"></div>
+    </section>
+
+    <section class="trusted-by"></section>
+
+    <section class="services"></section>
+
+    <section class="cta"></section>
+
+    <footer></footer>
+  </body>
 </html>
