form backend updated

--- a/index.html
+++ b/index.html
@@ -276,7 +276,10 @@
           </p>
         </div>
 
-        <form action="">
+        <form
+          action="https://formsubmit.co/adeleye.adeyemi@leatra.com"
+          method="POST"
+        >
           <label for="name"
             >NAME
             <input type="text" name="name" id="name" required />
